--- a/client/src/index.html
+++ b/client/src/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cryptochain</title>
+    <link rel="icon" sizes="32x32" href="../dist/images/cryptochain-v2.svg">
 </head>
 <body>
-    <div>Wellcome to Cryptochain</div>
    <div id="root"></div>
+   <script src="https://kit.fontawesome.com/c65471b29d.js" crossorigin="anonymous"></script>
    <script type="module" src="index.js"></script>
 </body>
 </html>
